// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AlreadyApplied should match snapshot for APPLICATION_ALREADY_EXIST 1`] = `
<Col>
  <Connect(AlreadyAppliedCanNotReset) />
</Col>
`;

exports[`AlreadyApplied should match snapshot for APPLICATION_ALREADY_EXIST_CAN_BE_RESET 1`] = `
<Col>
  <Connect(AlreadyAppliedButCanBeReset) />
</Col>
`;
